[tool.poetry]
name = "repl_nix_Astra"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.9.1"
Flask-Migrate = "^4.0.1"
Flask-Misaka = "^1.0.0"
Werkzeug = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Pillow = "^9.4.0"
SQLAlchemy = "^1.4.46"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
